--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Coffee Maker``</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./Assets/fav-icon.jpg">
+
+    <!-- Locomotive js css linking -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js">
 
     <!-- Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +29,7 @@
             <video autoplay loop muted src ="Assets/bg-video.mp4"></video>
             <div id="page1-content">
                 <nav>
-                    <h3>The Coffee Maker</h3>
+                    <h3>A perfect Cafe</h3>
                     <h4>Menu</h4>
                 </nav>
 
@@ -36,8 +40,45 @@
             </div>
         </div>
 
+        <!-- Page 2 Pending -->
         <div id="page2">
+            <div class="page2">
+                <div class="page2-top">
+                    <div class="first-text">
+                        <div id="one"><h3>Full-service creative agency.</h3></div>
+                        <div id="two"><h3>Two engagement models.</h3></div>
+                    </div>
+                    <div class="second-text">
+                        <h3>Paris & San Diego</h3>
+                    </div>
+                </div>
+                <div class="page2-top-border"></div>
+                <div class="page2-bottom">
+                    <div class="btm-text"><h2>
+                        <div class="up"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a digital brand accelerator. We</span></div></h2>
+                        <h2><div class="up"><span> design, develop, and scale market-defining</span></div></h2>
+                        <h2><div class="up"><span>brands by unlocking their hidden potential.</span></div></h2>
+                        <h2><div class="up"><span> Choose full cash compensation or offset up to</span></div></h2>
+                        <h2><div class="up"><span> 50% of our fees for equity in your company. Your</span></div></h2>
+                        <h2><div class="up"><span>vision, your decision.</span></div></h2>
+                    </div>
+                </div>
+            </div> 
+        </div>
 
+        <!-- Page 3  -->
+        <div id="page3">
+            <div id="page3-top">
+                <h4>We serve quality <span>Food</span> </h4>
+                <h2>Explore our Yummy</h2>
+                <h2>& Tasty Food and Beverages</h2>
+            </div>
+
+            <div id="page3-elements">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
         </div>
 
     </div>
@@ -49,6 +90,10 @@
 
 <!-- Scroll Trigger CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
+<!-- Locomotive js cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 
     <!-- Linking Script -->
     <script src="script.js"></script>
